--- a/E-HOSPITAL/src/VIEW/Register_GUI.form
+++ b/E-HOSPITAL/src/VIEW/Register_GUI.form
@@ -143,6 +143,9 @@
           <AccessibilityProperties>
             <Property name="AccessibleContext.accessibleName" type="java.lang.String" value="daftarButton"/>
           </AccessibilityProperties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="daftarButtonActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JTextField" name="namaTxtField">
           <Properties>
